kubernetes/apps/apps/memos/memos/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: memos
  name: memos
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: memos
        app: memos
    spec:
      containers:
        - name: memos
          image: harbor.cloud.traunseenet.com/ghcr.io/usememos/memos:0.31.0@sha256:24c2707ddd8fbd2ceaa7a61ecab86a53cdcde640b24ce572b73da14b00b5785f
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5230
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /var/opt/memos
            - name: deployment-config
              mountPath: /etc/secrets
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-data
        - name: deployment-config
          projected:
            sources:
              - secret:
                  name: memos-idp
              - configMap:
                  name: memos-instance-setting
