kubernetes/apps/apps/memos/memos/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: memos-web
  labels:
    app: memos
spec:
  type: ClusterIP
  selector:
    app: memos
  ports:
    - name: http
      port: 5230
      targetPort: http
      protocol: TCP
